$Id$

2006-04-14 Maarten ter Huurne <maarten@treewalker.org>
	* Made a build system similar to openMSX, on request of Edwin.
	  It's still in the early stages, but it can produce a working
	  executable on my system already.
	  To try it, edit build/main.mk and set QT_BASE correctly, then run:
	    make -f build/main.mk
	  This new build system does not interfere with the qmake build,
	  so we can use them side by side until the new system is mature.

2006-01-27 Edwin Velds <e.velds@gmail.com>
	* Updated to use the new "cpu" status update instead of
	  break/resume.

2005-12-26 Wouter Vermaelen <wouter.vermaelen@scarlet.be>
	* Use QTcpSocket iso winsock for TCP connections in windows:
	   - should now compile again on windows without manually hacking
	     the generated Makefiles

2005-10-17 Wouter Vermaelen <wouter.vermaelen@scarlet.be>
	* OpenMSX now uses unix domain sockets, updated connection code

2005-09-28 Edwin Velds <e.velds@gmail.com>
	* Fixed bug that caused a crash when no subslots/mapper was available

2005-09-24 Edwin Velds <e.velds@gmail.com>
	* Add breakpoint toggle
	* Made breakpoints sensitive to slot and mapper segment
	* Moved slot info outside SlotViewer

2005-09-11 Edwin Velds <e.velds@gmail.com>
	* Added memory slot/segment viewer widget
	* Added Breakpoint menu (still inactive)

2005-09-09 Albert Beevendorp
	* fixed a bug causing the disassembly showing the
	    wrong byte/word

2005-09-08 Edwin Velds <e.velds@gmail.com>
	* Changed disasm viewer initialisation code
	* Added ignoring openMSX log messages
	* Added memory initialisation

2005-09-04 Wouter Vermaelen <wouter.vermaelen@scarlet.be>
	* fixed compiler warnings
	* define own 'debug_bin2hex' proc:
	    removes dependency on the bin2hex.tcl script

2005-09-04 Edwin Velds <e.velds@gmail.com>
	* Fixed typos in connects
	* Better error handling
	* Changed errors to avoid winsock conflicts

2005-08-31 Edwin Velds <e.velds@gmail.com>
	* Initial import
