@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>CFBundleExecutable</key>
+	<string>openmsx-debugger</string>
+	<key>CFBundleGetInfoHTML</key>
+	<string>openMSX Debugger %VERSION%</string>
+	<key>CFBundleIconFile</key>
+	<string>%ICON%</string>
+	<key>CFBundleIdentifier</key>
+	<string>org.openmsx.openmsx-debugger</string>
+	<key>CFBundleName</key>
+	<string>openMSX Debugger</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>%VERSION%</string>
+	<key>CFBundleSignature</key>
+	<string>oMXD</string>
+	<key>CFBundleVersion</key>
+	<string>%VERSION%</string>
+	<key>NSPrefPaneIconFile</key>
+	<string>%ICON%</string>
+	<key>NSPrefPaneIconLabel</key>
+	<string>openMSX Debugger</string>
+</dict>
+</plist>
